tests/valid_inputs/bin_lt.cpp

int main() {
	return -1 < 42;
}
