tests/invalid_inputs/sema/func_param_void.cpp

void f(void x);

int main() {

}
